@@ -38,7 +38,16 @@ import freenet.support.ShortBuffer;
 import freenet.support.Logger.LogLevel;
 
 /**
- * A Message which can be read from and written to a DatagramPacket
+ * A Message which can be read from and written to a DatagramPacket.
+ * 
+ * SECURITY REDFLAG WARNING: Messages should normally be recreated rather 
+ * than passed on. Messages can contain sub-messages, these are used to
+ * avoid having to add whole new message types every time we add one field
+ * to a message... Passing on a message as-is means it includes the 
+ * sub-messages, which could lead to e.g. labelling, communication between
+ * colluding nodes along a request route, and just wasting bytes.
+ * 
+ * FIXME we should get rid of sub-messages.
  *
  * @author ian
  */
@@ -65,74 +74,80 @@ public class Message {
 	private List<Message> _subMessages;
 	public final long localInstantiationTime;
 	final int _receivedByteCount;
-
+	short priority;
+	private boolean needsLoadRT;
+	private boolean needsLoadBulk;
+	
 	public static Message decodeMessageFromPacket(byte[] buf, int offset, int length, PeerContext peer, int overhead) {
 		ByteBufferInputStream bb = new ByteBufferInputStream(buf, offset, length);
-		return decodeMessage(bb, peer, length + overhead, true, false);
+		return decodeMessage(bb, peer, length + overhead, true, false, false);
+	}
+	
+	public static Message decodeMessageLax(byte[] buf, PeerContext peer, int overhead) {
+		ByteBufferInputStream bb = new ByteBufferInputStream(buf);
+		return decodeMessage(bb, peer, buf.length + overhead, true, false, true);
 	}
 
 	private static Message decodeMessage(ByteBufferInputStream bb, PeerContext peer, int recvByteCount,
-	        boolean mayHaveSubMessages, boolean inSubMessage) {
+	        boolean mayHaveSubMessages, boolean inSubMessage, boolean veryLax) {
 		MessageType mspec;
 		try {
-			mspec = MessageType.getSpec(Integer.valueOf(bb.readInt()));
+			mspec = MessageType.getSpec(bb.readInt(), veryLax);
 		} catch (IOException e1) {
-			if(logDEBUG)
-				Logger.debug(Message.class,"Failed to read message type: "+e1, e1);
+			if (logMINOR) Logger.minor(Message.class,"Failed to read message type: "+e1, e1);
 			return null;
 		}
 		if (mspec == null) {
-		    return null;
+			if (logMINOR) Logger.minor(Message.class, "Bogus message type");
+			return null;
 		}
-		if(mspec.isInternalOnly())
-		    return null; // silently discard internal-only messages
+		if (mspec.isInternalOnly()) {
+			if(logMINOR) Logger.minor(Message.class, "Internal only message");
+			return null; // silently discard internal-only messages
+		}
 		Message m = new Message(mspec, peer, recvByteCount);
 		try {
-		    for (String name : mspec.getOrderedFields()) {
-		        Class<?> type = mspec.getFields().get(name);
-		        if (type.equals(LinkedList.class)) { // Special handling for LinkedList to deal with element type
-		            m.set(name, Serializer
-					        .readListFromDataInputStream(mspec.getLinkedListTypes().get(name),
-					        bb));
-		        } else {
-		            m.set(name, Serializer.readFromDataInputStream(type, bb));
-		        }
+			for (String name : mspec.getOrderedFields()) {
+				Class<?> type = mspec.getFields().get(name);
+				if (type.equals(LinkedList.class)) { // Special handling for LinkedList to deal with element type
+					m.set(name, Serializer
+					      .readListFromDataInputStream(mspec.getLinkedListTypes().get(name), bb));
+				} else {
+					m.set(name, Serializer.readFromDataInputStream(type, bb));
+				}
 			}
 			if (mayHaveSubMessages) {
-		    	while (bb.remaining() > 2) { // sizeof(unsigned short) == 2
-		    		ByteBufferInputStream bb2;
-		    		try {
-		    			int size = bb.readUnsignedShort();
-						if (bb.remaining() < size)
-							return m;
-
+				while (bb.remaining() > 2) { // sizeof(unsigned short) == 2
+					ByteBufferInputStream bb2;
+					try {
+						int size = bb.readUnsignedShort();
+						if (bb.remaining() < size) return m;
 						bb2 = bb.slice(size);
-		    		} catch (EOFException e) {
-		    			if(logMINOR) Logger.minor(Message.class, "No submessages, returning: "+m);
-		    			return m;
-		    		}
-		    		try {
-		    			Message subMessage = decodeMessage(bb2, peer, 0, false, true);
-		    			if(subMessage == null) return m;
-		    			if(logMINOR) Logger.minor(Message.class, "Adding submessage: "+subMessage);
-		    			m.addSubMessage(subMessage);
-		    		} catch (Throwable t) {
-		    			Logger.error(Message.class, "Failed to read sub-message: "+t, t);
-		    		}
-		    	}
-		    }
+					} catch (EOFException e) {
+						if (logMINOR) Logger.minor(Message.class, "No submessages, returning: "+m);
+						return m;
+					}
+					try {
+						Message subMessage = decodeMessage(bb2, peer, 0, false, true, veryLax);
+						if (subMessage == null) return m;
+						if (logMINOR) Logger.minor(Message.class, "Adding submessage: "+subMessage);
+						m.addSubMessage(subMessage);
+					} catch (Throwable t) {
+						Logger.error(Message.class, "Failed to read sub-message: "+t, t);
+					}
+				}
+			}
 		} catch (EOFException e) {
 			String msg = peer.getPeer()+" sent a message packet that ends prematurely while deserialising "+mspec.getName();
-			if(inSubMessage)
-				Logger.minor(Message.class, msg+" in sub-message", e);
-			else
-				Logger.error(Message.class, msg, e);
-		    return null;
+			if (inSubMessage) {
+				if (logMINOR) Logger.minor(Message.class, msg+" in sub-message", e);
+			} else Logger.error(Message.class, msg, e);
+			return null;
 		} catch (IOException e) {
-		    Logger.error(Message.class, "Unexpected IOException: "+e+" reading from buffer stream", e);
-		    return null;
+			Logger.error(Message.class, "Unexpected IOException: "+e+" reading from buffer stream", e);
+			return null;
 		}
-		if(logMINOR) Logger.minor(Message.class, "Returning message: "+m);
+		if (logMINOR) Logger.minor(Message.class, "Returning message: "+m+" from "+m.getSource());
 		return m;
 	}
 
@@ -143,7 +158,7 @@ public class Message {
 	private Message(MessageType spec, PeerContext source, int recvByteCount) {
 		localInstantiationTime = System.currentTimeMillis();
 		_spec = spec;
-		if(source == null) {
+		if (source == null) {
 			_internal = true;
 			_sourceRef = null;
 		} else {
@@ -151,30 +166,57 @@ public class Message {
 			_sourceRef = source.getWeakRef();
 		}
 		_receivedByteCount = recvByteCount;
+		priority = spec.getDefaultPriority();
+	}
+
+	/** Drops sub-messages, and makes it locally originated */
+	private Message(Message m) {
+		_spec = m._spec;
+		_sourceRef = null;
+		_internal = m._internal;
+		_payload.putAll(m._payload);
+		_subMessages = null;
+		localInstantiationTime = System.currentTimeMillis();
+		_receivedByteCount = 0;
+		priority = m.priority;
+		needsLoadRT = m.needsLoadRT;
+		needsLoadBulk = m.needsLoadBulk;
 	}
 
 	public boolean getBoolean(String key) {
-		return ((Boolean) _payload.get(key)).booleanValue();
+		return (Boolean) _payload.get(key);
 	}
 
 	public byte getByte(String key) {
-		return ((Byte) _payload.get(key)).byteValue();
+		return (Byte) _payload.get(key);
 	}
 
 	public short getShort(String key) {
-		return ((Short) _payload.get(key)).shortValue();
+		return (Short) _payload.get(key);
 	}
 
 	public int getInt(String key) {
-		return ((Integer) _payload.get(key)).intValue();
+		return (Integer) _payload.get(key);
 	}
 
 	public long getLong(String key) {
-		return ((Long) _payload.get(key)).longValue();
+		return (Long) _payload.get(key);
 	}
 
 	public double getDouble(String key) {
-	    return ((Double) _payload.get(key)).doubleValue();
+		return (Double) _payload.get(key);
+	}
+
+	public float getFloat(String key) {
+		return (Float) _payload.get(key);
+	}
+
+	public double[] getDoubleArray(String key) {
+		return ((double[]) _payload.get(key));
+	}
+
+	public float[] getFloatArray(String key) {
+		return (float[]) _payload.get(key);
 	}
 
 	public String getString(String key) {
@@ -183,6 +225,11 @@ public class Message {
 
 	public Object getObject(String key) {
 		return _payload.get(key);
+	}
+	
+	public byte[] getShortBufferBytes(String key) {
+		ShortBuffer buffer = (ShortBuffer) getObject(key);
+		return buffer.getData();
 	}
 
 	public void set(String key, boolean b) {
@@ -206,7 +253,11 @@ public class Message {
 	}
 
 	public void set(String key, double d) {
-		set(key, new Double(d));
+		set(key, Double.valueOf(d));
+	}
+
+	public void set(String key, float f) {
+		set(key, Float.valueOf(f));
 	}
 
 	public void set(String key, Object value) {
@@ -219,22 +270,19 @@ public class Message {
 		_payload.put(key, value);
 	}
 
-	public byte[] encodeToPacket(PeerContext destination) {
-		return encodeToPacket(destination, true, false);
+	public byte[] encodeToPacket() {
+		return encodeToPacket(true, false);
 	}
 
-	private byte[] encodeToPacket(PeerContext destination, boolean includeSubMessages, boolean isSubMessage) {
-//		if (this.getSpec() != MessageTypes.ping && this.getSpec() != MessageTypes.pong)
-//		Logger.logMinor("<<<<< Send message : " + this);
+	private byte[] encodeToPacket(boolean includeSubMessages, boolean isSubMessage) {
 
-		if(logDEBUG)
-			Logger.debug(this, "My spec code: "+_spec.getName().hashCode()+" for "+_spec.getName());
+		if (logDEBUG) Logger.debug(this, "My spec code: "+_spec.getName().hashCode()+" for "+_spec.getName());
 		ByteArrayOutputStream baos = new ByteArrayOutputStream();
 		DataOutputStream dos = new DataOutputStream(baos);
 		try {
 			dos.writeInt(_spec.getName().hashCode());
 			for (String name : _spec.getOrderedFields()) {
-				Serializer.writeToDataOutputStream(_payload.get(name), dos, destination);
+				Serializer.writeToDataOutputStream(_payload.get(name), dos);
 			}
 			dos.flush();
 		} catch (IOException e) {
@@ -242,9 +290,9 @@ public class Message {
 			throw new IllegalStateException(e.getMessage());
 		}
 
-		if(_subMessages != null && includeSubMessages) {
-			for(int i=0;i<_subMessages.size();i++) {
-				byte[] temp = _subMessages.get(i).encodeToPacket(destination, false, true);
+		if (_subMessages != null && includeSubMessages) {
+			for (Message _subMessage : _subMessages) {
+				byte[] temp = _subMessage.encodeToPacket(false, true);
 				try {
 					dos.writeShort(temp.length);
 					dos.write(temp);
@@ -256,8 +304,7 @@ public class Message {
 		}
 
 		byte[] buf = baos.toByteArray();
-		if(logDEBUG)
-			Logger.debug(this, "Length: "+buf.length+", hash: "+Fields.hashCode(buf));
+		if (logDEBUG) Logger.debug(this, "Length: "+buf.length+", hash: "+Fields.hashCode(buf));
 		return buf;
 	}
 
@@ -276,7 +323,7 @@ public class Message {
 	}
 
 	public PeerContext getSource() {
-		return _sourceRef == null ? null : (PeerContext) _sourceRef.get();
+		return _sourceRef == null ? null : _sourceRef.get();
 	}
 
 	public boolean isInternal() {
@@ -323,24 +370,23 @@ public class Message {
 	}
 
 	public void addSubMessage(Message subMessage) {
-		if(_subMessages == null) _subMessages = new ArrayList<Message>();
+		if (_subMessages == null) _subMessages = new ArrayList<Message>();
 		_subMessages.add(subMessage);
 	}
 
 	public Message getSubMessage(MessageType t) {
-		if(_subMessages == null) return null;
-		for(int i=0;i<_subMessages.size();i++) {
-			Message m = _subMessages.get(i);
-			if(m.getSpec() == t) return m;
+		if (_subMessages == null) return null;
+		for (Message m : _subMessages) {
+			if (m.getSpec() == t) return m;
 		}
 		return null;
 	}
 
 	public Message grabSubMessage(MessageType t) {
-		if(_subMessages == null) return null;
-		for(int i=0;i<_subMessages.size();i++) {
+		if (_subMessages == null) return null;
+		for (int i=0;i<_subMessages.size();i++) {
 			Message m = _subMessages.get(i);
-			if(m.getSpec() == t) {
+			if (m.getSpec() == t) {
 				_subMessages.remove(i);
 				return m;
 			}
@@ -350,6 +396,35 @@ public class Message {
 
 	public long age() {
 		return System.currentTimeMillis() - localInstantiationTime;
+	}
+
+	public short getPriority() {
+		return priority;
+	}
+	
+	public void boostPriority() {
+		priority--;
+	}
+
+	public boolean needsLoadRT() {
+		return needsLoadRT;
+	}
+	
+	public boolean needsLoadBulk() {
+		return needsLoadBulk;
+	}
+	
+	public void setNeedsLoadRT() {
+		needsLoadRT = true;
+	}
+	
+	public void setNeedsLoadBulk() {
+		needsLoadBulk = true;
+	}
+
+	/** Clone the message, clear sub-messages and set originator to self. */
+	public Message cloneAndDropSubMessages() {
+		return new Message(this);
 	}
 
 }
